--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8">
     <script src="index.js"></script>
     <link rel="stylesheet" href="./styles.css" />
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
   </head>
   <body>
+  
+ 
     <ul>
       <li id="cases">Confirmed Cases: 0</li>
       <li id="deaths">Deaths: 0</li>
@@ -18,10 +23,12 @@
         </a>
       </li>
       <li>
-        <a href="https://pomber.github.io/covid19/timeseries.json" target="_blank">
-          API Link
+        <a href="popup.html" target="_blank">
+         State Wise Record
         </a>
       </li>
     </ul>
+	
+	
   </body>
 </html>
